--- a/Sign Up.html
+++ b/Sign Up.html
@@ -70,7 +70,7 @@
         <rect class="line2" x="10"y="4" width="379" height="112" rx="59.5" />
         </svg>
         </a>
-        <a href="#/" class="demobtn down">
+        <a href="Studentform.html" class="demobtn down">
             <span>For <br> students</span>
             <svg width="400" height="130" viewBox="0 0 400 120" xmlns="http://www.w3.org/2000/svg">
         <rect class="line1" x="10"y="4" width="379" height="112" rx="59.5" />
