--- a/chem.html
+++ b/chem.html
@@ -7,18 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="style-files/style.css">
     <title>Uplift/Chemistry</title>
 </head>
 
-<body>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+<body style="background-image: url(images/back.png) ;">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
 
     <!-- navbar -->
@@ -102,56 +99,56 @@
             </div>
         </div>
     </div>
-<!-- carousel -->
-<div class="carousel-container">
-    <div class="mHeading"> Meet Our Mentors</div>
+    <!-- carousel -->
+    <div class="carousel-container">
+        <div class="mHeading"> Meet Our Mentors</div>
 
 
-    <div class="car-con">
+        <div class="car-con">
 
-        <div class="slider">
-            <input type="radio" name="testimonial" id="t-1">
-            <input type="radio" name="testimonial" id="t-2">
-            <input type="radio" name="testimonial" id="t-3" checked>
-            <input type="radio" name="testimonial" id="t-4">
-            <input type="radio" name="testimonial" id="t-5">
-            <div class="testimonials">
-                <label class="item" for="t-1">
+            <div class="slider">
+                <input type="radio" name="testimonial" id="t-1">
+                <input type="radio" name="testimonial" id="t-2">
+                <input type="radio" name="testimonial" id="t-3" checked>
+                <input type="radio" name="testimonial" id="t-4">
+                <input type="radio" name="testimonial" id="t-5">
+                <div class="testimonials">
+                    <label class="item" for="t-1">
                     <img src="images/mentor1.jpg" alt="picture">
                     <p>Pursuing Economic(h) from SRCC and head of project "Ujwal Bhavishya" </p>
                     <h2>- Khushi Gupta </h2>
                 </label>
-                <label class="item" for="t-2">
+                    <label class="item" for="t-2">
                     <img src="images/mentor2.jpg" alt="picture">
                     <p>Pursuing Bcom(h) from LSR. Passionate about educating. </p>
                     <h2>- Sabhuri Agarwal</h2>
                 </label>
-                <label class="item" for="t-3">
+                    <label class="item" for="t-3">
                     <img src="images/mentor3.jpg" alt="picture">
                     <p>Completed Btech with Mathematics as major subject. Always willing to guide juniors. </p>
                     <h2>- Sanchit Sharma</h2>
                 </label>
-                <label class="item" for="t-4">
+                    <label class="item" for="t-4">
                     <img src="images/mentor4.jpg" alt="picture">
                     <p>Pursuing Bcom(h) from LSR. Passionate about educating. </p>
                     <h2>- Anvita Gupta</h2>
                 </label>
-                <label class="item" for="t-5">
+                    <label class="item" for="t-5">
                     <img src="images/mentor5.jpg" alt="picture">
                     <p>Pursuing Btech in IT from DTU. Passionate about educating. </p>
                     <h2>- Harsh Jain</h2>
                 </label>
-            </div>
-            <div class="dots">
-                <label for="t-1"></label>
-                <label for="t-2"></label>
-                <label for="t-3"></label>
-                <label for="t-4"></label>
-                <label for="t-5"></label>
+                </div>
+                <div class="dots">
+                    <label for="t-1"></label>
+                    <label for="t-2"></label>
+                    <label for="t-3"></label>
+                    <label for="t-4"></label>
+                    <label for="t-5"></label>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
