--- a/index.html
+++ b/index.html
@@ -2,118 +2,105 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style-files/demostyle.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style-files/style.css">
-    <title>Uplift</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
-    <!-- script included -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="script.js" defer></script>
-    <!-- font awesome included -->
-    <script src="https://kit.fontawesome.com/ac044de7a0.js" crossorigin="anonymous"></script>
-    
+
+    <script>
+        $('.navTrigger').click(function() {
+            $(this).toggleClass('active');
+            console.log("Clicked menu");
+            $("#mainListDiv").toggleClass("show_list");
+            $("#mainListDiv").fadeIn();
+
+        });
+    </script>
+    <!-- Jquery needed -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
+
+    <!-- Function used to shrink nav bar removing paddings and adding black background -->
+    <script>
+        $(window).scroll(function() {
+            if ($(document).scrollTop() > 50) {
+                $('.nav').addClass('affix');
+                console.log("OK");
+            } else {
+                $('.nav').removeClass('affix');
+            }
+        });
+    </script>
+
 
 
 </head>
 
 <body>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
+    <nav class="nav">
+        <div class="container">
+            <div class="logo">
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div id="mainListDiv" class="main_list">
+                <ul class="navlinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="dropdown">
+                        <a class="dropbtn" href="#">Subjects</a>
+                        <div class="dropdown-content">
+                            <a href="math.html">Maths</a>
+                            <a href="chem.html">Chem</a>
+                            <a href="phy.html">Phy</a>
+                        </div>
 
-    <!-- navbar -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"> <img class="logo" src="images/logo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Schemes.html">Education schemes</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Subjects
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="phy.html">Physics</a>
-                        <a class="dropdown-item" href="chem.html">Chemistry</a>
-                        <a class="dropdown-item" href="math.html">Maths</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Mentors</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Sign Up.html">Sign Up</a>
-                </li>
-                <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                    Search
-                </button>
-            </form>
+                    </li>
+                    <li><a href="Sign Up.html">Sign Up</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <span class="navTrigger">
+                <i></i>
+                <i></i>
+                <i></i>
+            </span>
         </div>
     </nav>
 
-    <!-- banner -->
-    <div class="jumbotron jumbotron-fluid bg-white">
-        <!-- <img class="jumbImg" src="images/kid2.jpg" /> -->
-        <div class="jumbContainer">
-            <div class="jumbImg"></div>
-            <div class="container jumbTxt">
-                <p class="heading1">Heading 1</p>
-                <div class="word lead"></div>
-            </div>
-        </div>
-    </div>
+    <div class="home">
+        <div><img class="padleft" src="/images/logonew.png" alt=""></div>
 
-    <!-- section 2-->
+    </div>
+    <div style="height: 10vh">
+
+
+    </div>
     <h1 class="heading2">What does Uplift do?
         <h1 />
-        <div class="section-2 container">
+        <div class="section-2 ">
             <div class="row">
-                <div class="col-sm-6">
-                    <div class="sub card mb-3">
-                        <div class="row no-gutters">
-                            <div class="col-md-12">
-                                <div class="card-body">
-                                    <h5 class="card-title">Connect the students</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                <div class="col-sm-6 ">
+                    <div class="sub card mb-3 ">
+                        <div class="row no-gutters ">
+                            <div class="col-md-12 ">
+                                <div class="card-body ">
+                                    <h5 class="card-title ">Connect the students</h5>
+                                    <p class="card-text ">It helps to connect rural students with each other and help grow the community stronger and motivate them by studying together.</p>
 
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="sub card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-12">
-                                <div class="card-body">
-                                    <h5 class="card-title">Make education affordable </h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                    <p class="card-text">Some quick example text to build on the card title</p>
+                <div class="col-sm-6 ">
+                    <div class="sub card mb-3 " style="max-width: 540px; ">
+                        <div class="row no-gutters ">
+                            <div class="col-md-12 ">
+                                <div class="card-body ">
+                                    <h5 class="card-title ">Make education affordable </h5>
+                                    <p class="card-text ">Making education affordable by providing resources from volunteers who want to help in the cause !</p>
 
                                 </div>
                             </div>
@@ -122,29 +109,27 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="sub card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-12">
-                                <div class="card-body">
-                                    <h5 class="card-title">Provide guidance for career</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                    <p class="card-text">Some quick example text to build on the card title</p>
+            <div class="row ">
+                <div class="col-sm-6 ">
+                    <div class="sub card mb-3 " style="max-width: 540px; ">
+                        <div class="row no-gutters ">
+                            <div class="col-md-12 ">
+                                <div class="card-body ">
+                                    <h5 class="card-title ">Provide guidance for career</h5>
+                                    <p class="card-text ">Providing personal mentorship from experienced professionals and mentors who are active in the community, educating them about several opportunities and schemes.</p>
 
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="sub card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-12">
-                                <div class="card-body">
-                                    <h5 class="card-title">Platform to share knowldege </h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                    <p class="card-text">Some quick example text to build on the card title</p>
+                <div class="col-sm-6 ">
+                    <div class="sub card mb-3 " style="max-width: 540px; ">
+                        <div class="row no-gutters ">
+                            <div class="col-md-12 ">
+                                <div class="card-body ">
+                                    <h5 class="card-title ">Platform to share knowldege </h5>
+                                    <p class="card-text ">A portal for them to share their learnings and gain points (to be available)</p>
 
                                 </div>
                             </div>
@@ -153,33 +138,36 @@
                 </div>
             </div>
         </div>
-
+        <hr>
+        <hr>
         <!-- footer -->
-    <footer>
-        <div class="section-4 bg-light text-center">
-            <h4 style="padding-top:3%;font-size:2rem;">Got any Feedback?</h4>
-            <p class="text-muted" style="margin-top:1rem; font-size: 1.3rem;">Drop your message</p>
-            <div class="form-inline justify-content-center">
-                <input type="text" name="Email" id="email" placeholder="Type here" size="30"
-                    class="form-control px-4 py-2">
-                <input type="button" value="Send" class="btn px-4 py-2 m-3">
-            </div>
-            <div class="social">
-                <p class="text-muted" style="font-size:1.5rem;">Follow us</p>
-                <div class="d-flex flex-row justify-content-center">
-
-                    <i class="fab fa-facebook m-3"></i>
-                    <i class="fab fa-twitter m-3"></i>
-                    <i class="fab fa-instagram m-3"></i>
-                    <i class="fab fa-youtube m-3"></i>
-
+        <footer>
+            <div class="section-4 bg-light text-center ">
+                <h4 style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
+                <p class="text-muted " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your message</p>
+                <div style="text-align: center;" class="form-inline justify-content-center  ">
+                    <input type="text " name="Email " id="email " placeholder="Type here " size="50 " class="form-control px-4 py-2 ">
+                    <input type="button " value="Send " class="btn px-4 py-2 m-3 ">
                 </div>
-            </div>
-            <hr>
-            <h5 class="p-3">Uplift &copy;</h5>
+                <div class="social ">
+                    <p class="text-muted " style="font-size:2rem; text-align: center; ">Follow us</p>
+                    <div class="d-flex flex-row justify-content-center ">
 
-        </div>
-    </footer>
+                        <i class="fab fa-facebook m-3 "></i>
+                        <i class="fab fa-twitter m-3 "></i>
+                        <i class="fab fa-instagram m-3 "></i>
+                        <i class="fab fa-youtube m-3 "></i>
+
+                    </div>
+                </div>
+                <hr>
+                <h5 style="text-align: center; font-size: 3rem;" class="p-3 ">Uplift &copy;</h5>
+
+            </div>
+        </footer>
+
+
+
 </body>
 
 </html>
