--- a/Sign Up.html
+++ b/Sign Up.html
@@ -21,7 +21,7 @@
 
     <!-- navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"> <img class="logo" src="images/logo.png" alt=""></a>
+        <a class="navbar-brand" href="#"> <img class="logo" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,39 +29,38 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a style="color:#fbbf24 " class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Schemes.html">Education schemes</a>
-                </li>
+
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a style="color:#fbbf24 " class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Subjects
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="phy.html">Physics</a>
-                        <a class="dropdown-item" href="chem.html">Chemistry</a>
-                        <a class="dropdown-item" href="math.html">Maths</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Mentors</a>
+                    <div style="background-color: #333; " class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a style="color:#fbbf24  " class="dropdown-item" href="phy.html">Physics</a>
+                        <a style="color:#fbbf24 " class="dropdown-item" href="chem.html">Chemistry</a>
+                        <a style="color:#fbbf24 " class="dropdown-item" href="math.html">Maths</a>
+
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Sign Up.html">Sign Up</a>
+                    <a style="color:#fbbf24 " class="nav-link" href="Sign Up.html">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <a style="color:#fbbf24 " class="nav-link" href="#">Contact Us</a>
                 </li>
                 <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li> -->
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search... " aria-label="Search" />
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
                     Search
                 </button>
             </form>
         </div>
     </nav>
-
     <div>
         <a href="mentorform.html" class="demobtn up">
             <span>For Volunteers</span>
