--- a/phy.html
+++ b/phy.html
@@ -28,6 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
+                    <a class="nav-link" href="index.html"><img style="height: 3rem; width: 8rem;" src="/images/logonew.png" alt=""></span>
+                    </a>
+                </li>
+                <li class="nav-item active">
                     <a style="color:#fbbf24 " class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
 
