--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/ac044de7a0.js" crossorigin="anonymous"></script>
 
     <script>
-        $('.navTrigger').click(function () {
+        $('.navTrigger').click(function() {
             $(this).toggleClass('active');
             console.log("Clicked menu");
             $("#mainListDiv").toggleClass("show_list");
@@ -25,7 +25,7 @@
 
     <!-- Function used to shrink nav bar removing paddings and adding black background -->
     <script>
-        $(window).scroll(function () {
+        $(window).scroll(function() {
             if ($(document).scrollTop() > 50) {
                 $('.nav').addClass('affix');
                 console.log("OK");
@@ -51,9 +51,9 @@
                     <li class="dropdown">
                         <a class="dropbtn" href="#">Subjects</a>
                         <div class="dropdown-content">
-                            <a href="math.html">Maths</a>
-                            <a href="chem.html">Chem</a>
                             <a href="phy.html">Phy</a>
+                            <a href="chem.html">Chem</a>
+                            <a href="math.html">Maths</a>
                         </div>
 
 
@@ -72,8 +72,7 @@
 
     <div class="home">
         <div><img class="padleft" src="/images/logonew.png" alt=""></div>
-        <div class="home-quote">"One of the most powerful tools for empowering individuals and communities is making
-            certain that any individual who wants to receive a quality education can do so."</div>
+        <div class="home-quote">"One of the most powerful tools for empowering individuals and communities is making certain that any individual who wants to receive a quality education can do so."</div>
 
     </div>
     <div style="height: 10vh">
@@ -90,8 +89,7 @@
                             <div class="col-md-12 ">
                                 <div class="card-body ">
                                     <h5 class="card-title ">Connect the students</h5>
-                                    <p class="card-text ">It helps to connect rural students with each other and help
-                                        grow the community stronger and motivate them.</p>
+                                    <p class="card-text ">It helps to connect rural students with each other and help grow the community stronger and motivate them.</p>
 
                                 </div>
                             </div>
@@ -104,8 +102,7 @@
                             <div class="col-md-12 ">
                                 <div class="card-body ">
                                     <h5 class="card-title ">Make education affordable </h5>
-                                    <p class="card-text ">Making education affordable by providing resources from
-                                        volunteers who want to help in the cause !</p>
+                                    <p class="card-text ">Making education affordable by providing resources from volunteers who want to help in the cause !</p>
 
                                 </div>
                             </div>
@@ -121,8 +118,7 @@
                             <div class="col-md-12 ">
                                 <div class="card-body ">
                                     <h5 class="card-title ">Provide guidance for career</h5>
-                                    <p class="card-text ">Providing mentorship from experienced professionals who are
-                                        active in the community.</p>
+                                    <p class="card-text ">Providing mentorship from experienced professionals who are active in the community.</p>
 
                                 </div>
                             </div>
@@ -135,8 +131,7 @@
                             <div class="col-md-12 ">
                                 <div class="card-body ">
                                     <h5 class="card-title ">Platform to share knowldege </h5>
-                                    <p class="card-text ">A portal for them to share their learnings and gain points (to
-                                        be available)</p>
+                                    <p class="card-text ">A portal for them to share their learnings and gain points (to be available)</p>
 
                                 </div>
                             </div>
@@ -176,12 +171,11 @@
                 <div class="sec1">
                     <div class="section-4 bg-light text-center ">
                         <h4 style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
-                        <p class="text-muted " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your
-                            message</p>
+                        <p class="text-muted " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your message
+                        </p>
                         <div style="text-align: center;" class="form-inline justify-content-center ">
 
-                            <input type="text" name="Email" id="email" placeholder="Type here" size="25"
-                                class="form-control px-4 py-2">
+                            <input type="text" name="Email" id="email" placeholder="Type here" size="25" class="form-control px-4 py-2">
                             <input type="button" value="Send" class="snd-btn btn px-4 py-2 m-3">
                         </div>
                     </div>
