added contactUs, minor changes

--- a/Sign Up.html
+++ b/Sign Up.html
@@ -51,7 +51,7 @@
                     <a style="color:#fbbf24 " class="nav-link" href="Sign Up.html">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                    <a style="color:#fbbf24 " class="nav-link" href="#">Contact Us</a>
+                    <a style="color:#fbbf24 " class="nav-link" href="ContactUs.html">Contact Us</a>
                 </li>
                 <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
