--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                     </li>
                     <li><a href="Sign Up.html">Sign Up</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="ContactUs.html">Contact Us</a></li>
                 </ul>
             </div>
             <span class="navTrigger">
