--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@
         <hr>
         <!-- footer -->
         <footer>
+
+            <div class="sec1">
+                <div class="section-4 bg-light text-center ">
+                    <h4 style=" font-size:5rem; text-align: center; ">Got any Feedback?</h4>
+                    <p class="text-muted " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your
+                        message</p>
+                    <div style="text-align: center;" class="form-inline justify-content-center ">
+
+                        <input type="text" name="Email" id="email" placeholder="Type here" size="25"
+                            class="form-control px-4 py-2">
+                        <input type="button" value="Send" class="snd-btn btn px-4 py-2 m-3">
+                    </div>
+                </div>
+            </div>
             <div class="social">
                 <p>Follow us</p>
                 <div class="icons">
@@ -161,33 +175,7 @@
                 </div>
             </div>
 
-            <div class="contains-sec">
-                <div class="sec2">
-                    <div class="box">
-                        <div class="header"><i class="fa fa-envelope" aria-hidden="true"></i>
-                            <p class="hidden">Thanks!</p>
-                        </div>
-                        <div class="form">
-                            <input type="text" placeholder="Your Email" class=" Input field">
-                            <input type="button" value="Subscribe" class="Input button">
-                        </div>
-                    </div>
-                </div>
-                <div class="sec1">
-                    <div class="section-4 bg-light text-center ">
-                        <h4 style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
-                        <p class="text-muted " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your
-                            message</p>
-                        <div style="text-align: center;" class="form-inline justify-content-center ">
 
-                            <input type="text" name="Email" id="email" placeholder="Type here" size="25"
-                                class="form-control px-4 py-2">
-                            <input type="button" value="Send" class="snd-btn btn px-4 py-2 m-3">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
             <hr>
             <div style="text-align: center; font-size: 3rem;" class="p-3">Uplift &copy;</div>
 
