--- a/ContactUs.html
+++ b/ContactUs.html
@@ -136,7 +136,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="our-team">
                     <div class="picture">
-                        <img class="img-fluid" src="https://picsum.photos/130/130?image=1027">
+                        <img class="img-fluid" src="/images/shrishty.jpg">
                     </div>
                     <div class="team-content">
                         <h3 class="name">Shrishty Jain</h3>
