--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 
 
-
+            <!-- 
             <div class="box">
                 <div class="header"><i class="fa fa-envelope" aria-hidden="true"></i>
                     <p class="hidden">Thanks!</p>
@@ -157,7 +157,7 @@
                     <input type="text" placeholder="Your Email" class=" Input field">
                     <input type="button" value="Subscribe" class="Input button">
                 </div>
-            </div>
+            </div> -->
 
             <div class="section-4 bg-light text-center ">
                 <h4 style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
