changes in footer

--- a/index.html
+++ b/index.html
@@ -160,17 +160,19 @@
             </div> -->
 
             <div class="section-4 bg-light text-center ">
-                <h4 style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
-                <p class="text-muted " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your message
+                <h4 class="hoverFeedback" style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
+                <p class="text-muted hoverFeedback " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your message
                 </p>
-                <div style="text-align: center;" class="form-inline justify-content-center ">
+                <div style="display: block; text-align: center;" class=" justify-content-center ">
 
                     <input type="text" name="Email" id="email" placeholder="Type here" size="25" class="form-control px-4 py-2">
+                    <br>
                     <input type="button" value="Send" class="snd-btn btn px-4 py-2 m-3">
                 </div>
             </div>
             <div class="social">
-                <p>Follow us</p>
+                <p class="text-muted hoverFeedback " style="margin-top:8rem; font-size: 3rem; text-align: center; ">Follow Us
+                </p>
                 <div class="icons">
 
                     <i class="fab fa-2x fa-facebook m-3"></i>
