--- a/index.html
+++ b/index.html
@@ -80,75 +80,75 @@
 
     </div>
     <h1 class="heading2">What does Uplift do?
-        <h1 />
-        <div class="section-2 ">
-            <div class="row">
-                <div class="col-sm-6 ">
-                    <div class="sub card mb-3 ">
-                        <div class="row no-gutters ">
-                            <div class="col-md-12 ">
-                                <div class="card-body ">
-                                    <h5 class="card-title ">Connect the students</h5>
-                                    <p class="card-text ">It helps to connect rural students with each other and help grow the community stronger and motivate them.</p>
+    </h1>
+    <div class="section-2 ">
+        <div class="row">
+            <div class="col-sm-6 ">
+                <div class="sub card mb-3 ">
+                    <div class="row no-gutters ">
+                        <div class="col-md-12 ">
+                            <div class="card-body ">
+                                <h5 class="card-title ">Connect the students</h5>
+                                <p class="card-text ">It helps to connect rural students with each other and help grow the community stronger and motivate them.</p>
 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 ">
-                    <div class="sub card mb-3 " style="max-width: 540px; ">
-                        <div class="row no-gutters ">
-                            <div class="col-md-12 ">
-                                <div class="card-body ">
-                                    <h5 class="card-title ">Make education affordable </h5>
-                                    <p class="card-text ">Making education affordable by providing resources from volunteers who want to help in the cause !</p>
-
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 ">
+                <div class="sub card mb-3 " style="max-width: 540px; ">
+                    <div class="row no-gutters ">
+                        <div class="col-md-12 ">
+                            <div class="card-body ">
+                                <h5 class="card-title ">Make education affordable </h5>
+                                <p class="card-text ">Making education affordable by providing resources from volunteers who want to help in the cause !</p>
 
-            <div class="row ">
-                <div class="col-sm-6 ">
-                    <div class="sub card mb-3 " style="max-width: 540px; ">
-                        <div class="row no-gutters ">
-                            <div class="col-md-12 ">
-                                <div class="card-body ">
-                                    <h5 class="card-title ">Provide guidance for career</h5>
-                                    <p class="card-text ">Providing mentorship from experienced professionals who are active in the community.</p>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 ">
-                    <div class="sub card mb-3 " style="max-width: 540px; ">
-                        <div class="row no-gutters ">
-                            <div class="col-md-12 ">
-                                <div class="card-body ">
-                                    <h5 class="card-title ">Platform to share knowldege </h5>
-                                    <p class="card-text ">A portal for them to share their learnings and gain points (to be available)</p>
-
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <hr>
-        <hr>
-        <!-- footer -->
-        <footer>
+
+        <div class="row ">
+            <div class="col-sm-6 ">
+                <div class="sub card mb-3 " style="max-width: 540px; ">
+                    <div class="row no-gutters ">
+                        <div class="col-md-12 ">
+                            <div class="card-body ">
+                                <h5 class="card-title ">Provide guidance for career</h5>
+                                <p class="card-text ">Providing mentorship from experienced professionals who are active in the community.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 ">
+                <div class="sub card mb-3 " style="max-width: 540px; ">
+                    <div class="row no-gutters ">
+                        <div class="col-md-12 ">
+                            <div class="card-body ">
+                                <h5 class="card-title ">Platform to share knowldege </h5>
+                                <p class="card-text ">A portal for them to share their learnings and gain points (to be available)</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <hr>
+    <!-- footer -->
+    <footer style="background-image: url(images/back.png) ;">
 
 
 
 
-            <!-- 
+        <!-- 
             <div class="box">
                 <div class="header"><i class="fa fa-envelope" aria-hidden="true"></i>
                     <p class="hidden">Thanks!</p>
@@ -159,38 +159,38 @@
                 </div>
             </div> -->
 
-            <div class="section-4 bg-light text-center ">
-                <h4 class="hoverFeedback" style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
-                <p class="text-muted hoverFeedback " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your message
-                </p>
-                <div style="display: block; text-align: center;" class=" justify-content-center ">
+        <div class="section-4 bg-light text-center">
+            <h4 class="hoverFeedback" style="padding-top:3%; font-size:5rem; text-align: center; ">Got any Feedback?</h4>
+            <p class="text-muted hoverFeedback " style="margin-top:1rem; font-size: 3rem; text-align: center; ">Drop your message
+            </p>
+            <div style="display: block; text-align: center;" class=" justify-content-center ">
 
-                    <input type="text" name="Email" id="email" placeholder="Type here" size="25" class="form-control px-4 py-2">
-                    <br>
-                    <input type="button" value="Send" class="snd-btn btn px-4 py-2 m-3">
-                </div>
+                <input type="text" name="Email" id="email" placeholder="Type here" size="25" class="form-control px-4 py-2">
+                <br>
+                <input type="button" value="Send" class="snd-btn btn px-4 py-2 m-3">
             </div>
-            <div class="social">
-                <p class="text-muted hoverFeedback " style="margin-top:8rem; font-size: 3rem; text-align: center; ">Follow Us
-                </p>
-                <div class="icons">
+        </div>
+        <div class="social">
+            <p class="text-muted hoverFeedback " style="margin-top:8rem; font-size: 3rem; text-align: center; ">Follow Us
+            </p>
+            <div class="icons">
 
-                    <i class="fab fa-2x fa-facebook m-3"></i>
-                    <i class="fab fa-2x fa-twitter m-3"></i>
-                    <i class="fab fa-2x fa-instagram m-3"></i>
-                    <i class="fab fa-2x fa-youtube m-3"></i>
+                <i class="fab fa-2x fa-facebook m-3"></i>
+                <i class="fab fa-2x fa-twitter m-3"></i>
+                <i class="fab fa-2x fa-instagram m-3"></i>
+                <i class="fab fa-2x fa-youtube m-3"></i>
 
-                </div>
             </div>
+        </div>
 
 
-            <hr>
-            <div style="text-align: center; font-size: 3rem;" class="p-3">Uplift &copy;</div>
+        <hr>
+        <div style="text-align: center; font-size: 3rem;" class="p-3">Uplift &copy;</div>
 
 
 
 
-        </footer>
+    </footer>
 
 
 
