--- a/Studentform.html
+++ b/Studentform.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form for Sudents</title>
     <link rel="stylesheet" href="style-files/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon1.png">
+
     <style>
         body {
             height: 100%;
