--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- font awesome included -->
     <script src="https://kit.fontawesome.com/ac044de7a0.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon1.png">
 
     <script>
         $('.navTrigger').click(function() {
@@ -40,6 +41,7 @@
 </head>
 
 <body>
+
     <nav class="nav">
         <div class="container">
             <div class="logo">
