--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon1.png">
+
     <style>
         body {
             font-family: tahoma;
