--- a/math.html
+++ b/math.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="style-files/style.css">
     <title>Uplift/Maths</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon1.png">
+
 </head>
 
 <body>
