fixed home cards

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="col-md-12 ">
                             <div class="card-body ">
                                 <h5 class="card-title ">Provide guidance for career</h5>
-                                <p class="card-text ">Providing mentorship from experienced professionals who are active in the community.</p>
+                                <p class="card-text ">Providing mentorship from experienced professionals and mentors who are active in the community.</p>
 
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                         <div class="col-md-12 ">
                             <div class="card-body ">
                                 <h5 class="card-title ">Platform to share knowldege </h5>
-                                <p class="card-text ">A portal for them to share their learnings and gain points (to be available)</p>
+                                <p class="card-text ">A portal for them to share their learnings and gain points (to be available) which well help them purschase study material</p>
 
                             </div>
                         </div>
