--- a/ContactUs.html
+++ b/ContactUs.html
@@ -184,7 +184,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="our-team">
                     <div class="picture">
-                        <img class="img-fluid" src="https://picsum.photos/130/130?image=856">
+                        <img class="img-fluid" src="/images/Arshia.jpeg">
                     </div>
                     <div class="team-content">
                         <h3 class="name">Arshia Vashisht</h3>
@@ -207,7 +207,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="our-team">
                     <div class="picture">
-                        <img class="img-fluid" src="https://picsum.photos/130/130?image=836">
+                        <img class="img-fluid" src="/images/Raksha.jpeg">
                     </div>
                     <div class="team-content">
                         <h3 class="name">Raksha Gupta</h3>
